# url-shortener

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 02651859426b_create_urls_table.py
static/: index.html  script.js  style.css
tests/: conftest.py  test_app.py  test_db.py
url_shortener/: app.py  settings.py
url_shortener/extensions/: database.py  schemas.py  services.py
url_shortener/routers/: core.py  urls.py
