[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["Pedro Ferrari <pdrferrari08@gmail.com>"]
readme = "README.md"
packages = [{include = "url_shortener"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
validators = "^0.22.0"
sqlalchemy = "^2.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
